# my6502

./: .travis.yml  CMakeLists.txt  Doxyfile.in  README.md
.github/workflows/: ci.yml
app/: main.cpp
cmake/: CodeCoverage.cmake  Doctest.cmake  Warnings.cmake
include/: Bus.h  R6502.h  config.h.in
lib/olcPixelGameEngine/: olcPixelGameEngine.h
src/: Bus.cpp  R6502.cpp
tests/: CMakeLists.txt  test_rdwr.cpp
